# DesktopTimer

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
res/: mytimer.rc  res.qrc
src/: main.cpp  widget.cpp  widget.h  widget.ui
